--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "default": "index2.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html",
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "",
   "license": "ISC",
